<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="track_android">Track: Android</string>
    <string name="country_kenya">Country: Kenya</string>
    <string name="email_edwardmarathi_gmail_com">Email: edwardmarathi@gmail.com</string>
    <string name="phone_no_254727472880">Phone No. +254727472880</string>
    <string name="slack_username_edward_kariuki">Slack Username-: Edward Kariuki</string>
    <string name="todo">TODO</string>
</resources>
