<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#D3D3D3	"
    android:layout_height="match_parent"
    tools:context=".MyProfile">
    <ImageView
        android:id="@+id/src"
        android:layout_width="200dp"
        android:rotation="270"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/alc"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:orientation="vertical"
        android:background="#D3D3D3	"
        android:layout_below="@id/src"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:text="@string/track_android"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/country_kenya"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/email_edwardmarathi_gmail_com"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/phone_no_254727472880"
            android:textSize="25sp" />
        <TextView
            android:text="@string/slack_username_edward_kariuki"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>