<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3D3D3	"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welc_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_linear"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-medium"
            android:background="@android:color/holo_orange_light"
            android:text="@string/about_alc"
            android:textColor="@android:color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@android:color/holo_orange_light"
            android:fontFamily="sans-serif-medium"
            android:text="@string/my_profile"
            android:textColor="@android:color/black"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>